--- a/Melodify Frontend/style/controls.css
+++ b/Melodify Frontend/style/controls.css
@@ -22,7 +22,7 @@ input[type="search"], input[type="email"], input[type="password"], input[type="t
     border: none;
     border-radius: 4px;
     box-shadow: 0 1px 2px var(--box-shadow);
-    background-color: var(--surface-color);
+    background-color: var(--button-color);
     color: var(--on-surface);
 }
 
