--- a/Melodify Frontend/style/style.css
+++ b/Melodify Frontend/style/style.css
@@ -41,6 +41,16 @@
     --button-color: #333333
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100vh;
+}
+
 body{
     font-family: "Roboto", sans-serif;
 }
