Fixed links and search

--- a/Melodify Frontend/style/login.css
+++ b/Melodify Frontend/style/login.css
@@ -5,6 +5,8 @@ body{
     overflow: hidden;
     background-color: var(--primary-color);
     color: var(--on--primary);
+    /*background-image: url("../music.jpg");*/
+    /*background-size: cover;*/
 }
 
 main {
