--- a/Melodify Frontend/style/style.css
+++ b/Melodify Frontend/style/style.css
@@ -56,9 +56,19 @@ body{
 }
 
 .fa {
-    margin: auto 10px;
+    margin: auto 0.5em;
 }
 
 span.active {
     color: var(--accent-color);
+}
+
+a {
+    color: var(--on--primary);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--accent-color);
+    text-decoration: underline;
 }
