--- a/Melodify Frontend/style/style.css
+++ b/Melodify Frontend/style/style.css
@@ -98,3 +98,31 @@ button.a:focus {
 .item .name {
     font-size: medium;
 }
+
+.items {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 10px;
+    overflow-y: auto;
+}
+
+.item{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+}
+
+.item img{
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+}
+
+main {
+    background-color: var(--surface-color);
+    color: var(--on-surface);
+}
