--- a/Melodify Frontend/style/collection.css
+++ b/Melodify Frontend/style/collection.css
@@ -15,9 +15,46 @@
     width: 100%;
 }
 
-.media-banner > img {
+.media-banner h1:hover {
+    text-decoration: underline;
+    color: var(--accent-color);
+    cursor: pointer;
+}
+
+.image-container > img {
     border-radius: 10px;
     max-height: 150px;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.image-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+
+.image-container > div {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: xx-large;
+    transition: .5s ease;
+    background-color: rgba(255, 0, 0, 25%);
+}
+
+.image-container:hover > div {
+    opacity: 1;
 }
 
 .media-metadata {
