--- a/Melodify Frontend/style/style.css
+++ b/Melodify Frontend/style/style.css
@@ -116,10 +116,37 @@ button.a:focus {
     gap: 10px;
 }
 
-.item img{
+.item .image-container{
     width: 50px;
     height: 50px;
     border-radius: 5px;
+    position: relative;
+}
+
+.item .image-container img {
+    width: 100%;
+    height: 100%;
+}
+
+.item .image-container div {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(255, 0, 0, 25%);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.item .image-container:hover div {
+    opacity: 1;
 }
 
 main {
