--- a/Melodify Frontend/style/controls.css
+++ b/Melodify Frontend/style/controls.css
@@ -1,14 +1,3 @@
-dialog {
-    border: none;
-    border-radius: 10px;
-    padding: 30px;
-    max-width: 400px;
-    margin: auto;
-    outline: none;
-    background-color: var(--surface-color);
-    color: var(--on-surface);
-}
-
 form {
     display: flex;
     flex-direction: column;
@@ -60,12 +49,44 @@ select option {
     color: var(--on-surface);
 }
 
-button, input[type="button"]{
+button, input[type="button"] {
     background-color: var(--surface-color);
     color: var(--on-surface);
     border: none;
 }
 
-button:hover, input[type="button"]{
+button:hover, input[type="button"] {
     color: var(--accent-color);
+}
+
+dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--surface-color);
+    color: var(--on-surface);
+    border: 1px solid var(--strong-border);
+    padding: 20px;
+    z-index: 1000;
+    border-radius: 10px;
+}
+
+dialog input[type="text"] {
+    background-color: var(--button-color);
+    color: var(--on-surface);
+}
+
+dialog .dialog-content {
+    text-align: center;
+}
+
+dialog .dialog-buttons {
+    margin-top: 20px;
+}
+
+dialog button {
+    padding: 8px;
+    background-color: var(--button-color);
+    border-radius: 5px;
 }
